--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ td.material-icons {
 #sticky-sidebar.nav-link a {
     color: white;
 }
+
+.md-blue { 
+    font-size: 24px;
+    color: #4a90e2;
+}
+
+.md-inactive {
+    color: #c7c7c7;
+}
